--- a/modules/menu/templates/help.html
+++ b/modules/menu/templates/help.html
@@ -8,7 +8,7 @@
 
     <p>
         <dl>
-            <dt>1.1 Dynamic Tree Builder - edit</h3><a name="dynamictree-1-0"></a></dt>
+            <dt>1.1 Dynamic Tree Builder - edit<a name="dynamictree-1-0"></a></dt>
             <dd>
                 <br />
                 Click on the "+" or "-" near the folder icon to expand/collapse current node.<br />
