- added bordercolor for form fieldsets
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4275 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/css/form.css
+++ b/themes/core/css/form.css
@@ -14,9 +14,10 @@ margin:10px;
 }
 
 fieldset {
-border:1px solid #666;
-margin-bottom:10px;
-padding:10px;
+    border: 1px solid;
+    border-color: #FFFFFF #ACA899 #ACA899 #FFFFFF;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 
 legend {
