- cleanup (added method parameter comments, moved css from errorhandler to error.css)
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4299 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/css/error.css
+++ b/themes/core/css/error.css
@@ -102,3 +102,24 @@ A:link {text-decoration: none}
 A:visited {text-decoration: none}
 A:active {text-decoration: none}
 A:hover {text-decoration: underline; color: #FF0000; }
+
+
+/* used by errorhandler.core.php->getErrorContext() */
+.num {
+  float: left;
+  color: gray;
+  font-size: 13px;
+  font-family: monospace;
+  text-align: right;
+  margin-right: 6pt;
+  padding-right: 6pt;
+  border-right: 1px solid gray;
+}
+
+td {
+  vertical-align: top;
+}
+
+code {
+  white-space: nowrap;
+}
