--- a/themes/backend/backend7/css/backend.css
+++ b/themes/backend/backend7/css/backend.css
@@ -496,7 +496,7 @@ table.admintable tr#cell3
     cursor: default;
     font-size: 12px;
     font-weight: bold;
-    background: transparent url(images/thback.gif) repeat-x scroll 0 0;
+    background: transparent url(../images/thback.gif) repeat-x scroll 0 0;
 }
 
 .tr_header td,
@@ -509,7 +509,7 @@ table.admintable tr#cell3
     cursor: default;
     font-size: 12px;
     font-weight: bold;
-    background: transparent url(images/thback.gif) repeat-x scroll 0 0;
+    background: transparent url(../images/thback.gif) repeat-x scroll 0 0;
 }
 
 .tr_header_small td
@@ -671,7 +671,7 @@ table.admintable tr#cell3
 */
 .admin_header
 {
-    background: url(images/thback.gif) repeat-x scroll 0 0;
+    background: url(../images/thback.gif) repeat-x scroll 0 0;
     border-color: #ffffff #ACA899 #ACA899 #ffffff;
     border-width: 1px;
     border-style: solid;
