- path fixes; form.css was not found

--- a/themes/backend/admin/css/admin.css
+++ b/themes/backend/admin/css/admin.css
@@ -9,7 +9,9 @@
     Syntax recommendation http://www.w3.org/TR/REC-CSS2
 */
 
-@import url('../core/css/form.css') all;
+/* ###################   CSS Imports   ################### */
+
+@import url('../../core/css/form.css') all;
 /* @import url('fieldset.css') all; */
 
 body
