--- a/themes/backend/backend7/css/backend.css
+++ b/themes/backend/backend7/css/backend.css
@@ -2,8 +2,8 @@
 
 /* ###################   CSS Imports   ################### */
 
-@import url("../../core/css/form.css") all;
-@import url("../../core/css/ui_buttons.css") all;
+@import url("../../../core/css/form.css") all;
+@import url("../../../core/css/ui_buttons.css") all;
 
 html, body {
 background-color:#d7d6d6;
