--- a/themes/backend/admin/css/admin.css
+++ b/themes/backend/admin/css/admin.css
@@ -11,7 +11,7 @@
 
 /* ###################   CSS Imports   ################### */
 
-@import url('../../core/css/form.css') all;
+@import url('../../../core/css/form.css') all;
 /* @import url('fieldset.css') all; */
 
 body
