--- a/themes/core/css/tabs.css
+++ b/themes/core/css/tabs.css
@@ -1,77 +1,64 @@
-/*
- * jQuery Styles
- *
- */
-
+/* CSS for Clansuite jQuery Tabs */
 @media screen
 {
-    /**.tabs {overflow:hidden; margin-left:1em}**/
-
+    /** .tabs {overflow:hidden; margin-left:1em} **/
+    
     .tabs ul {
-    	overflow:hidden;
-    	margin:  0;
-    	padding: 0;
+        overflow:hidden;
+        margin:0;
+        padding:0;
     }
 
     .tabs .content {
-    	/**margin:  0;**
-    	/**padding: 4px 0;**/
-    	border-top: 2px #eee solid;
-    	border-bottom: 2px #eee solid;
-    	background: #fff;
+        border-top:2px #ddd solid;
+        background:#fff;
     }
 
-    .tabs .content * {margin:0}
+    .tabs .content * {
+        margin:0;
+    }
 
     .tabs ul li {
-    	float: left;
-    	margin: 0 0.3em 0 0;
-    	list-style-type: none;
+        float:left;
+        list-style-type:none;
+        margin:0 0.3em 0 0;
     }
-
-    .tabs ul li a { padding: .2em 2em; }
 
     .tabs ul li a {
-    	display: block;
-    	width: auto;
-    	font-weight: bold;
-    	font-size: 1em;
-    	background: #fff;
-    	color: #666;
-    	margin: 0;
-    	border: 2px solid #ddd;
-    	border-bottom: 0px #eee solid;
+        display:block;
+        width:auto;
+        font-weight:700;
+        font-size:1em;
+        background:#fff;
+        color:#666;
+        border:2px solid #ddd;
+        border-bottom:0 #eee solid;
+        margin:0;
+        padding:.2em 2em;
     }
 
-    .tabs ul li a:focus,
-    .tabs ul li a:hover,
-    .tabs ul li a:active { 
-        background: #fff;
-        font-weight: bold;
-        color: #666;
-        text-decoration: none;
-        border-bottom: 0px #eee solid;
+    .tabs ul li a:focus,.tabs ul li a:hover,.tabs ul li a:active {
+        background:#fff;
+        font-weight:700;
+        color:#666;
+        text-decoration:none;
+        border-bottom:0 #eee solid;
     }
 
-    .tabs ul li.current a,
-    .tabs ul li.current a:focus,
-    .tabs ul li.current a:hover,
-    .tabs ul li.current a:active {
-    	color: #444;
-    	text-decoration: none;
-    	font-weight: bold;
-    	background: #bbb;
-    	border-color: #eee;
+    .tabs ul li.current a,.tabs ul li.current a:focus,.tabs ul li.current a:hover,.tabs ul li.current a:active {
+        color:#444;
+        text-decoration:none;
+        font-weight:700;
+        background:#bbb;
+        border-color:#eee;
     }
 }
 
-.tabs .current-info
-{
-    color: red;
+.tabs .current-info {
+    color:red;
 }
 
-.accessibletabsanchor
-{
+.accessibletabsanchor {
     position:absolute;
     left:-999em;
 }
