- path fix for thback.gif
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4765 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/backend/admin/css/admin.css
+++ b/themes/backend/admin/css/admin.css
@@ -361,7 +361,7 @@ table.admintable tr#cell3
     cursor: default;
     font-size: 12px;
     font-weight: bold;
-    background: transparent url(../../images/thback.gif) repeat-x scroll 0 0;
+    background: transparent url(../images/thback.gif) repeat-x scroll 0 0;
 }
 
 .tr_header td,
