- success icon of flashmessages changed
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4772 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/css/error.css
+++ b/themes/core/css/error.css
@@ -28,7 +28,7 @@ padding:15px 20px 15px 50px;
 }
 
 .success {
-background:url(../images/icons/page_edit.png) no-repeat 15px 50% #DFD;
+background:url(../images/icons/information.png) no-repeat 15px 50% #DFD;
 border:1px solid #BFB;
 color:#0B0;
 font-weight:700;
