--- a/themes/core/css/error.css
+++ b/themes/core/css/error.css
@@ -10,6 +10,16 @@
     CSSTidy 1.3: Sat, 22 May 2010 16:05:09 -0700
 */
 
+body {
+color:#000000;
+font-family: tahoma,verdana,arial,sans-serif;
+font-size:12px;
+}
+
+table {
+color: #222222;
+font-size:12px;
+}
 .alert {
 background:url(../images/icons/error.png) no-repeat 15px 50% #fff6bf;
 border-bottom:2px solid #ffd324;
