- switched from admin.css to import.css on index.tpl - removed char from builder.ini to enable form importing
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4916 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/backend/admin/css/import.css
+++ b/themes/backend/admin/css/import.css
@@ -9,22 +9,22 @@
  * @license    GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
  * @author     Jens-André Koch <vain@clansuite.com>
  * @author     Paul Brand <info@isp-tenerife.net>
- * @package      CSFW
- * subpackage    Core
- * @version        1.0
+ * @package    CSFW
+ * @subpackage Core
+ * @version    1.0
  * -----------------------------------------------------------------------------------------------
 */
 
 /** [Imports] */
-@import url('../../../core/css/form.css'');
+@import url('../../../core/css/form.css');
 
 /**
  * -----------------------------------------------------------------------------------------------
- * Framework: Clansuite CSS-Framework
- * Description: Theme CSS-Files for building one compact theme importfile
+ * Framework:    Clansuite CSS-Framework
+ * Description:  Theme CSS-Files for building one compact theme importfile
  * Version:      1.0
- * Author:        Clansuite CSS-Builder
- * Date:           2010/11/05
+ * Author:       Clansuite CSS-Builder
+ * Date:         2010/11/05
  * -------------------------------------------------------------------------------------------------
 */
 /* [admin.css] */
