- form, ul, li style fixes
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@5155 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/css/csfw/1-base/core_base.css
+++ b/themes/core/css/csfw/1-base/core_base.css
@@ -46,6 +46,7 @@
         font-size: 100%;
         font-family: inherit;
         vertical-align: baseline;
+
     }
 
     :focus
@@ -199,12 +200,15 @@
      */
 
     /* default */
-    ul
+    ul, li
     {
-        list-style: disc;
-        padding-left: 20px;
-        padding-top: 5px;
-        padding-bottom: 8px;
+        /*list-style: disc;*/
+        /*padding-left: 20px;*/
+        /*padding-top: 5px;*/
+        /*padding-bottom: 8px;*/        
+        padding 0;
+        display: inline;
+        margin: 0;
     }
     ol
     {
