--- a/themes/core/css/form.css
+++ b/themes/core/css/form.css
@@ -2,89 +2,104 @@
 /* CSS for Clansuite Forms */
 
 /* choose one */
-/* @import url("clansuite_buttons.css"); import clansuite button styles */
-@import url("ui_buttons.css"); /* import jquery ui button style */
+@import url("clansuite_buttons.css"); /* import clansuite button styles */
+/* @import url("ui_buttons.css"); /* import jquery ui button style */
 
 .form {
-clear:both;
-color:#000;
-font-family:Arial, Verdana;
-font-size:12px;
-margin:10px;
+    clear:both;
+    color:#000;
+    font-family:Arial, Verdana;
+    font-size:12px;
+    margin:10px;
 }
 
-fieldset {
-    border: 1px solid;
-    border-color: #FFFFFF #ACA899 #ACA899 #FFFFFF;
-    margin-bottom: 10px;
-    padding: 10px;
+/* not .form fieldset */
+fieldset.form {
+    background: none repeat scroll 0 0 #FAFAFA;
+    border: 1px solid #AAA;
+    display: block;
+    margin: 0 0 1em;
+    padding: 0.5em;
 }
 
-legend {
-padding:0 5px;
+.form legend {
+    background: none repeat scroll 0 0 white;
+    border: 1px solid #BBBBBB;
+    color: #000000;
+    font-size: 110%;
+    font-weight: bold;
+    padding: 2px 12px;
 }
 
 div.notice {
-background:#FCF9D8;
-border:1px solid #Fc7;
-padding:10px;
+    background:#FCF9D8;
+    border:1px solid #Fc7;
+    padding:10px;
 }
 
 .form .formline {
-clear:both;
-padding-bottom:5px;
-padding-top:5px;
+    clear:both;
+    padding-bottom:5px;
+    padding-top:5px;
 }
 
 .form .formline,.form .formline label {
-min-height:30px;
+    min-height:30px;
 }
 
 .form .formline .forminside {
-margin-left:200px;
+    margin-left:200px;
 }
 
 .form .formline label {
-float:left;
-min-width:150px;
+    float:left;
+    min-width:150px;
 }
 
 .form span.formdescription {
-color:#666;
-float:left;
-font-size:11px;
+    color:#666;
+    float:left;
+    font-size:11px;
 }
 
 .form span.value {
-font-size:11px;
-margin-left:5px;
+    font-size:11px;
+    margin-left:5px;
 }
 
 .form .formline input[type=password],.form .formline select,.form .formline input[type=text] {
-width:255px;
+    width:255px;
+}
+
+.form .formline input:focus {
+    border-color: orange;
 }
 
 .form .formline textarea {
-width:100%;
+    width:100%;
+}
+
+.form .formline textarea:focus {
+    border-color: orange;
 }
 
 .form label em,.form .formbutton {
-float:right;
+    float:right;
 }
 
 .form .formline .markitup {
-float:left;
-margin-bottom:5px;
+    float:left;
+    margin-bottom:5px;
 }
 
 .form .formline .markitup textarea {
-width:auto;
+    width:auto;
 }
 
 .form .buttonbar {
-margin-left:150px;
+    margin-left:150px;
 }
 
 .form .formline input[type=radio],.form .formline input[type=checkbox],.form .actionbutton {
-float:left;
+    float:left;
 }
