- rounded corners for forms (+ introducing firefox fieldset select bug)
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@5169 dd235d61-e4b4-4fb3-b1fb-b81c2defcbc9

--- a/themes/core/css/form.css
+++ b/themes/core/css/form.css
@@ -13,9 +13,17 @@
     margin:10px;
 }
 
+/*fieldset {
+    -moz-border-radius: 8px 8px 8px 8px;
+    -moz-box-shadow: 2px 2px 2px #BBBBBB;
+}*/
+
 /* not .form fieldset */
 fieldset.form {
-    background: none repeat scroll 0 0 #FAFAFA;
+     /* Firefox CSS3 Bug: */
+    -moz-border-radius: 8px 8px 8px 8px;
+    -moz-box-shadow: 2px 2px 2px #BBBBBB;
+    background-color: #FAFAFA;   
     border: 1px solid #AAA;
     display: block;
     margin: 0 0 1em;
